--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,148 @@ h1,h2,h3,h4,h5,h6{font-size:inherit; font-weight: 400;}
 /*======= Reset finish! ======= */
 
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
+
+/* font-family: 'Inter', sans-serif; */
+/* font-family: 'Playfair Display', serif; */
+
+@font-face {
+	font-family: 'muli';
+	src: url('../fonts/Muli-Regular.eot');
+	src: local('☺'), url('../fonts/Muli-Regular.woff') format('woff'), url('../fonts/Muli-Regular.ttf') format('truetype'), url('../fonts/Muli-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+.flex-container{
+    display: flex;
+}
+.container_wide{
+    max-width: 1250px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.buttons{
+    display: block;
+    border-radius: 8px;
+    box-shadow: 1px 1px 1px 1px #AFB0B9;
+    font-family: 'Inter', sans-serif;
+    text-align: center;
+}
+.buttons:active{
+    box-shadow: none;
+}
+.btn_primary{
+    border: 1px solid #FB8F1D;
+    background-color: #FFF;
+    color: #FB8F1D;
+}
+.btn_secondary{
+    background-color: #FB8F1D;
+    color: #FFF; 
+}
+.btn-small{
+    width: 132px;
+    font-size: 15px;
+    line-height: 15px;
+    padding: 14px 0;
+    font-weight: 500; 
+}
+.btn-medium{
+    width: 164px;
+    height: 48px;
+}
+.btn-big{
+    width: 180px;
+    font-size: 17px;
+    line-height: 17px;
+    padding: 18px 0;
+    font-family: 'muli';
+    font-weight: 700;
+}
+
+.header__row{
+    padding-top: 45px;
+    padding-bottom: 80px;
+}
+.row{
+    justify-content: space-between;
+}
+.menu__link{
+    margin-right: 34px;
+    padding-top: 15px;
+}
+.menu__item{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #B8BECD;
+    border-bottom: 2px solid transparent;
+}
+.menu__item_active{
+    font-weight: 500;
+    color: #202336;
+}
+.menu__item:hover{
+    color: #FB8F1D;
+    border-bottom: 2px solid #FB8F1D;
+
+}
+.row__buttons{
+    margin-left: 18px;
+}
+.inner__content{
+    width: 60%;
+}
+.inner__title{
+    max-width: 356px;
+    margin-top: 30px;
+    margin-bottom: 65px;
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 80px;
+    color: #202336;
+}
+.inner__subtitle{
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    color: #202336;
+}
+.inner__subtitle::after{
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: block;
+    content: "";
+    width: 32px;
+    height: 2px;
+    border: 1px solid #202336;
+    border-radius: 2px;
+}
+.inner__selectors{
+    max-width: 470px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+}
+.selection-box{
+    width: 220px;
+    height: 52px;
+    border: 0.8px solid #AFB0B9;
+    border-radius: 6px;
+    margin-bottom: 35px;
+    padding: 0px 25px;
+}
+.selection-input{
+    width: 100%;
+    height: 100%;
+    display: block;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    color: #4A4C53;
+}
+.inner__image{
+    margin-right: -90px;
+}
