--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,6 @@ body{
     margin-bottom: 10px;
 }
 
-
 .gallery__bottom{
     justify-content: space-between;
     flex-wrap: wrap;
@@ -410,3 +409,62 @@ body{
     line-height: 28px;
 }
 
+.footer{
+    background-color: #F9F9FB;
+    padding-top: 80px;
+    padding-bottom: 25px;
+}
+.footer__content{
+    justify-content: space-between;
+    padding-bottom: 85px;
+    border-bottom: 0.6px solid #C4C4C4;
+}
+.footer__collumn{
+    max-width: 390px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.footer__text{
+    font-family: 'muli';
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 28px;
+    color: #848484;
+    padding-top: 30px;
+}
+.footer__text_top{
+    width: 90%;
+}
+.footer__text_bottom{
+    padding-bottom: 6px;
+}
+.footer__items{
+    width: 720px;
+    justify-content: space-between;
+}
+.footer__item{
+    width: 25%;
+}
+.footer-item__header{
+    font-family: 'muli';
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 45px;
+    color: #000000;
+}
+.footer-item__link{
+    display: block;
+    font-family: 'muli';
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
+    color: #848484;
+    padding: 10px 0;
+}
+.footer__social{
+    padding-top: 30px;
+    justify-content: center;
+}
+.social__link{
+    padding: 0 17.5px;
+}
