--- a/css/style.css
+++ b/css/style.css
@@ -48,26 +48,65 @@ h1,h2,h3,h4,h5,h6{font-size:inherit; font-weight: 400;}
 /*======= Reset finish! ======= */
 
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
-
-/* font-family: 'Inter', sans-serif; */
-/* font-family: 'Playfair Display', serif; */
-
 @font-face {
-	font-family: 'muli';
-	src: url('../fonts/Muli-Regular.eot');
-	src: local('☺'), url('../fonts/Muli-Regular.woff') format('woff'), url('../fonts/Muli-Regular.ttf') format('truetype'), url('../fonts/Muli-Regular.svg') format('svg');
-	font-weight: normal;
+	font-family: 'Inter';
+	src: url('../fonts/inter/Inter-Regular.eot');
+	src: local('☺'), url('../fonts/inter/Inter-Regular.woff') format('woff'), url('../fonts/inter/Inter-Regular.ttf') format('truetype'), url('../fonts/inter/Inter-Regular.svg') format('svg');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/inter/Inter-Medium.eot');
+    src: local('☺'), url('../fonts/inter/Inter-Medium.woff') format('woff'), url('../fonts/inter/Inter-Medium.ttf') format('truetype'), url('../fonts/inter/Inter-Medium.svg') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/inter/Inter-SemiBold.eot');
+    src: local('☺'), url('../fonts/inter/Inter-SemiBold.woff') format('woff'), url('../fonts/inter/Inter-SemiBold.ttf') format('truetype'), url('../fonts/inter/Inter-SemiBold.svg') format('svg');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Inter';
+	src: url('../fonts/inter/Inter-Bold.eot');
+	src: local('☺'), url('../fonts/inter/Inter-Bold.woff') format('woff'), url('../fonts/inter/Inter-Bold.ttf') format('truetype'), url('../fonts/inter/Inter-Bold.svg') format('svg');
+	font-weight: 700;
 	font-style: normal;
 }
 
-body{
-    font-family: 'muli';
+@font-face {
+    font-family: 'Muli';
+    src: url('../fonts/muli/Muli-Light.eot');
+    src: local('☺'), url('../fonts/muli/Muli-Light.woff') format('woff'), url('../fonts/muli/Muli-Light.ttf') format('truetype'), url('../fonts/muli/Muli-Light.svg') format('svg');
     font-weight: 300;
-    font-size: 17px;
-    line-height: 30px;
-    color: #7D7987;
+    font-style: normal;
 }
+@font-face {
+    font-family: 'Muli';
+    src: url('../fonts/muli/Muli.eot');
+    src: local('☺'), url('../fonts/muli/Muli.woff') format('woff'), url('../fonts/muli/Muli.ttf') format('truetype'), url('../fonts/muli/Muli.svg') format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Muli';
+	src: url('../fonts/muli/Muli-Bold.eot');
+	src: local('☺'), url('../fonts/muli/Muli-Bold.woff') format('woff'), url('../fonts/muli/Muli-Bold.ttf') format('truetype'), url('../fonts/muli/Muli-Bold.svg') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Playfair-Display';
+	src: url('../fonts/playfair-display/PlayfairDisplay-Bold.eot');
+	src: local('☺'), url('../fonts/playfair-display/PlayfairDisplay-Bold.woff') format('woff'), url('../fonts/playfair-display/PlayfairDisplay-Bold.ttf') format('truetype'), url('../fonts/playfair-display/PlayfairDisplay-Bold.svg') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
 .flex-container{
     display: flex;
 }
@@ -82,17 +121,24 @@ body{
     padding: 0 15px;
 }
 .title{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair-Display';
     font-weight: 700;
     font-size: 36px;
     line-height: 50px;
     color: #000000;
 }
+.text{
+    font-family: 'Muli';
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 30px;
+    color: #7D7987;
+}
 .buttons{
+    font-family: 'Inter';
     display: block;
     border-radius: 8px;
     box-shadow: 1px 1px 1px 1px #AFB0B9;
-    font-family: 'Inter', sans-serif;
     text-align: center;
 }
 .buttons:active{
@@ -115,23 +161,23 @@ body{
     font-weight: 500; 
 }
 .btn-medium{
+    font-family: 'Muli';
     width: 164px;
     font-size: 16px;
     line-height: 16px;
     padding: 16px 0;
-    font-family: 'muli';
     font-weight: 600;
 }
 .btn-big{
+    font-family: 'Muli';
+    font-weight: 700;
     width: 180px;
     font-size: 17px;
     line-height: 17px;
     padding: 18px 0;
-    font-family: 'muli';
-    font-weight: 700;
 }
 .link-style{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 600;
     color: #FB8F1D;
 }
@@ -168,7 +214,7 @@ body{
     padding-top: 15px;
 }
 .menu__item{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 400;
     font-size: 16px;
     color: #B8BECD;
@@ -192,14 +238,14 @@ body{
     max-width: 356px;
     margin-top: 30px;
     margin-bottom: 65px;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair-Display';
     font-weight: 700;
     font-size: 64px;
     line-height: 80px;
     color: #202336;
 }
 .inner__subtitle{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 600;
     font-size: 22px;
     line-height: 27px;
@@ -233,9 +279,10 @@ body{
     width: 100%;
     height: 100%;
     display: block;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 400;
     font-size: 15px;
+    line-height: 15px;
     color: #4A4C53;
 }
 .inner__image{
@@ -317,7 +364,7 @@ body{
     justify-content: flex-end;
 }
 .gallery-item__title{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 600;
     font-size: 17px;
     line-height: 17px;
@@ -325,7 +372,7 @@ body{
     margin-bottom: 8px;
 }
 .gallery-item__text{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 500;
     font-size: 15px;
     line-height: 15px;
@@ -345,7 +392,7 @@ body{
     margin-bottom: 40px;
 }
 .content__user-name{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 700;
     font-size: 22px;
     line-height: 48px;
@@ -353,7 +400,7 @@ body{
     margin-bottom: 10px;
 }
 .content__user-position{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 400;
     font-size: 18px;
     line-height: 18px;
@@ -426,7 +473,7 @@ body{
     width: 95%;
 }
 .story-item__title{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 700;
     font-size: 19px;
     line-height: 30px;
@@ -434,7 +481,7 @@ body{
     margin-bottom: 15px;
 }
 .story-item__text{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 400;
     font-size: 15px;
     line-height: 26px;
@@ -461,7 +508,7 @@ body{
     justify-content: space-between;
 }
 .footer__text{
-    font-family: 'muli';
+    font-family: 'Muli';
     font-weight: 300;
     font-size: 18px;
     line-height: 28px;
@@ -482,7 +529,7 @@ body{
     width: 25%;
 }
 .footer-item__header{
-    font-family: 'muli';
+    font-family: 'Muli';
     font-weight: 700;
     font-size: 19px;
     line-height: 45px;
@@ -490,7 +537,7 @@ body{
 }
 .footer-item__link{
     display: block;
-    font-family: 'muli';
+    font-family: 'Muli';
     font-weight: 300;
     font-size: 18px;
     line-height: 20px;
